--- a/app/src/main/res/layout/fragment_memory.xml
+++ b/app/src/main/res/layout/fragment_memory.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.Memory.MemoryFragment" >
 
     <TextView
-        android:id="@+id/text_gallery"
+        android:id="@+id/text_memory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
