--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.User.UserFragment" >
 
     <TextView
-        android:id="@+id/text_slideshow"
+        android:id="@+id/text_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
