--- a/app/src/main/res/layout/fragment_medicine_box.xml
+++ b/app/src/main/res/layout/fragment_medicine_box.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.Medicine_box.Medicine_boxFragment" >
 
     <TextView
-        android:id="@+id/text_slideshow"
+        android:id="@+id/text_medicine_box"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
