--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,17 +7,115 @@
     android:layout_height="match_parent"
     tools:context=".ui.Login.LoginFragment" >
 
-    <TextView
-        android:id="@+id/text_login"
+    <!-- 主要內容 -->
+    <LinearLayout
+        android:id="@+id/activity_main"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context=".Activity_login">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="233dp"
+            android:layout_marginTop="60dp"
+            android:padding="10dp"
+            android:src="@drawable/images10">
+
+        </ImageView>
+
+        <!-- 帳號輸入 -->
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:hint="帳號(用戶名稱):"
+            android:ems="10"
+            android:inputType="text"
+            android:textAlignment="textStart"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            tools:ignore="Autofill,HardcodedText,TextFields"
+            android:gravity="start" />
+
+        <!-- 密碼輸入 -->
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:hint="密碼:"
+            android:ems="10"
+            android:inputType="text"
+            android:textAlignment="textStart"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            tools:ignore="Autofill,HardcodedText,TextFields"
+            android:gravity="start" />
+
+        <!-- 登入、註冊按鈕 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button11"
+                android:layout_width="190dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/color_3"
+                android:text="登錄"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                app:backgroundTint="@null"
+                tools:ignore="ButtonStyle,HardcodedText" />
+
+            <Button
+                android:id="@+id/button12"
+                android:background="@drawable/color_3"
+                app:backgroundTint="@null"
+                android:layout_width="190dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:text="註冊"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                tools:ignore="ButtonStyle,HardcodedText" />
+
+        </LinearLayout>
+
+        <!-- 記住密碼的 CheckBox -->
+        <CheckBox
+            android:id="@+id/remember_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="記住密碼"
+            tools:ignore="HardcodedText" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <!-- Google帳戶連動按鈕 -->
+            <Button
+                android:id="@+id/button14"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:text="Google"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:background="@drawable/color_3"
+                app:backgroundTint="@null"
+                tools:ignore="ButtonStyle,HardcodedText" />
+
+        </LinearLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
