--- a/app/src/main/res/layout/fragment_medicine.xml
+++ b/app/src/main/res/layout/fragment_medicine.xml
@@ -206,11 +206,20 @@
         </LinearLayout>
         <!-- 查詢按鈕 -->
         <Button
-            android:id="@+id/button_query"
+            android:id="@+id/query_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="查詢"
             android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/medicine_allbox_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="藥物總覽"
+            android:layout_marginTop="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             tools:ignore="HardcodedText" />
